# Xray-core-python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: deploy-pypi.yml  wheels.yml
sample/: sample.py
src/: xray.cpp
xray/: __init__.py
xray-go/core/: config.go
xray-go/infra/conf/serial/: builder.go
xray-go/main/: run.go
xray-go/main/commands/all/api/: shared.go  stats_query.go
